# NdArray-Cpp

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
include/: ndarray-base.hpp  ndarray-core.hpp  ndarray-definition.hpp  ndarray-expr.hpp  ndarray-func.hpp  ndarray-op.hpp  ndarray-shape.hpp  ndarray-size.hpp  ndarray-slice.hpp  ndarray-util.hpp  ndarray.hpp
test/: CMakeLists.txt  ndarray-base-test.cpp  ndarray-method-test.cpp  ndarray-op-test.cpp  ndarray-slice-test.cpp
